<resources>
  <string name="app_name">Travel Buddy</string>
  <string name="button_add_new_fuel_fill_up">Add New Fill Up</string>
  <string name="button_add_entry">Save</string>
  <string name="button_cancel_entry">Cancel</string>
  <string name="price_per_litre">Cost €:</string>
  <string name="odemeter_reading">Odometer :</string>
  <string name="volume_of_litres">Litres :</string>
  <string name="hint_price_per_litre">137.7</string>
  <string name="hint_volume_of_litres">9.5</string>
  <string name="Refresh">refresh</string>
  <string name="hint_odemeter_reading">099483</string>
  <string name="title_activity_login">Sign in</string>

  <!-- Strings related to login -->
  <string name="prompt_email">Email</string>
  <string name="prompt_password">Password (Min 8 Characters)</string>
  <string name="action_sign_in">Register</string>
  <string name="action_sign_in_short">Sign in</string>
  <string name="error_invalid_email">This email address is invalid</string>
  <string name="error_invalid_password">This password is too short</string>
  <string name="error_incorrect_password">This password is incorrect</string>
  <string name="error_field_required">This field is required</string>
  <string name="permission_rationale">"Contacts permissions are needed for providing email
    completions."
  </string>
  <string name="email">Email</string>
  <string name="password">Password</string>
  <string name="userName">Name</string>
  <string name="title_activity_forget_and_change_password">ForgetAndChangePasswordActivity</string>
  <string name="title_activity_user_data">Current Data</string>
  <string name="title_add_new_fill_up">Add New Fill Up</string>
  <string name="title_dashboard">Dashboard</string>
  <string name="action_settings">Settings</string>
  <string name="section_format">Hello World from section: %1$d</string>
  <string name="user_guide">User Guide</string>
  <string name="expense_to_date">Expenses to date:</string>

  <string name="logout">Logout</string>

  <string name="locate_Closest_Garage">Locate Garage</string>
  <string name="title_activity_maps">Map</string>
  <string name="register">Register</string>
  <string name="textview">TextView</string>

  <string name="user_Guide_Text">
    Developed by: Alex Mac Uaid.\n
    Student Number: X00118478.\n
    Fourth Year Project.\n
    Institute of Technology Tallaght Dublin.\n
    Application Name : Travel Buddy.
    \n
    \n
    Features:\n
    *Add gas ,mileage, cost expenses \n
     effortlessly.\n\n
    *Instant backup on the cloud.\n\n
    *Sync across multiple devices.\n\n
    *Various Tips and graphs available to \n track mileage,improve fuel economy, find running costs.\n\n
    *View Your Data.\n\n
    *Retrieve your Personal Profile When \n upgrading your phone.\n\n
    *Google Maps API Displaying Current \n Location. \n\n
    *Automatic Data Removal after one year.\n\n
    *AdMob Ads to ensure the application \n remains Free. \n
    </string>
</resources>
