<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
  android:background="@color/backgroundColor"
    tools:context="com.travelbuddyapp.www.travelbuddy.register">

    <android.support.design.widget.TextInputLayout
        android:layout_width="368dp"
        android:layout_height="59dp"
        android:layout_marginTop="84dp"
        app:layout_constraintLeft_toLeftOf="parent"
      android:textColor="@color/buttonText"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

      <android.support.design.widget.TextInputEditText
        android:id="@+id/emailTxt"
        android:layout_width="match_parent"
        android:textColor="@color/buttonText"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress|textWebEmailAddress" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="172dp"
      android:textColor="@color/buttonText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

      <android.support.design.widget.TextInputEditText
        android:id="@+id/passwordTxt"
        android:layout_width="match_parent"
        android:textColor="@color/buttonText"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_password"
        android:inputType="textPassword|textWebPassword" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
      android:textColor="@color/buttonText"
        android:layout_marginTop="280dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

      <android.support.design.widget.TextInputEditText
        android:id="@+id/nameTxt"
        android:layout_width="match_parent"
        android:textColor="@color/buttonText"
        android:layout_height="wrap_content"
        android:hint="@string/userName"
        android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/regBtn"
        android:layout_width="150dp"
      android:textColor="@color/buttonText"
        android:layout_height="wrap_content"
        android:layout_marginEnd="52dp"
        android:layout_marginTop="60dp"
        android:text="Register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />
</android.support.constraint.ConstraintLayout>
