<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/backgroundColor"
  tools:context="com.travelbuddyapp.www.travelbuddy.MainActivity">

  <com.jjoe64.graphview.GraphView
    android:id="@+id/graphprice"
    android:layout_width="160dip"
    android:layout_height="200dip"
    android:layout_marginBottom="8dp"
    android:layout_marginEnd="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginTop="8dp"
    app:layout_constraintBottom_toTopOf="@+id/refresh"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.0" />

  <com.jjoe64.graphview.GraphView
    android:id="@+id/graphfuel"
    android:layout_width="160dip"
    android:layout_height="200dip"
    android:layout_marginBottom="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginLeft="16dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"

    app:layout_constraintBottom_toTopOf="@+id/newFillUp"
    app:layout_constraintEnd_toStartOf="@+id/graphprice"
    app:layout_constraintHorizontal_bias="0.421"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.0"/>

  <com.jjoe64.graphview.GraphView
    android:id="@+id/graphPrediction"
    android:layout_width="200dip"
    android:layout_height="180dip"
    android:layout_marginBottom="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginLeft="16dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.059"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/graphfuel"
    app:layout_constraintVertical_bias="0.039" />

  <Button
    android:id="@+id/newFillUp"
    android:layout_width="160dp"
    android:layout_height="47dp"
    android:layout_marginBottom="16dp"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="16dp"
    android:background="@drawable/rectangle_button"
    android:text="@string/button_add_new_fuel_fill_up"
    android:textColor="@color/buttonText"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toStartOf="@+id/refresh"
    app:layout_constraintHorizontal_bias="0.285"
    app:layout_constraintStart_toStartOf="parent" />

  <Button
    android:id="@+id/refresh"
    android:layout_width="160dp"
    android:layout_height="46dp"
    android:layout_marginBottom="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginRight="16dp"
    android:text="@string/Refresh"
    android:textColor="@color/buttonText"
    android:background="@drawable/rectangle_button"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintRight_toRightOf="parent" />

  <TextView
    android:id="@+id/tip"
    android:layout_width="372dp"
    android:layout_height="33dp"
    android:layout_marginBottom="24dp"
    android:layout_marginEnd="8dp"
    android:layout_marginLeft="16dp"
    android:layout_marginStart="24dp"
    android:layout_marginTop="8dp"
    android:text="TextView"
    android:textAlignment="textStart"
    android:textColor="@color/UserText"
    android:textSize="14sp"
    android:textStyle="bold|italic"
    app:layout_constraintBottom_toTopOf="@+id/newFillUp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/graphPrediction"
    app:layout_constraintVertical_bias="1.0" />

  <TextView
    android:id="@+id/textView2"
    android:layout_width="180dp"
    android:layout_height="21dp"
    android:layout_marginBottom="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:text="Cost Saving Tips:"
    android:textAlignment="textStart"
    android:textColor="@color/UserText"
    android:textSize="14sp"
    android:textStyle="bold"
    app:layout_constraintBottom_toTopOf="@+id/tip"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.103"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/graphPrediction"
    app:layout_constraintVertical_bias="0.875"
    tools:text="Cost Saving Tips:" />

  <Button
    android:id="@+id/userDataCall"
    android:layout_width="108dp"
    android:layout_height="45dp"
    android:layout_marginBottom="8dp"
    android:layout_marginEnd="24dp"
    android:layout_marginRight="16dp"
    android:layout_marginStart="56dp"
    android:layout_marginTop="8dp"
    android:background="@drawable/rectangle_button"
    android:text="User Data!"
    android:textColor="@color/buttonText"
    app:layout_constraintBottom_toTopOf="@+id/refresh"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="1.0"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintStart_toEndOf="@+id/graphPrediction"
    app:layout_constraintTop_toBottomOf="@+id/graphprice"
    app:layout_constraintVertical_bias="0.154" />

  <Button
    android:id="@+id/locateGarage"
    android:layout_width="103dp"
    android:layout_height="57dp"
    android:layout_marginBottom="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginRight="16dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:background="@drawable/rectangle_button"
    android:text="@string/locate_Closest_Garage"
    android:textColor="@color/buttonText"
    app:layout_constraintBottom_toTopOf="@+id/refresh"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.41"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintStart_toEndOf="@+id/graphPrediction"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.725" />

</android.support.constraint.ConstraintLayout>
